tests/source1/fail/runtime_typecheck5.js
"str" - "s"; 
// expected: error: "boo type mismatch"